Expand DSL and categorical math model